@@ -26,6 +26,9 @@ def new_pub_key((e, n)):
     'n' is the RSA composite of primes; it is a string in OpenSSL's binary format,
     i.e., a number of bytes in big-endian.
     """ 
+    import warnings
+    warnings.warn('Deprecated. No maintainer for PGP. If you use this, please inform M2Crypto maintainer.', DeprecationWarning)
+
     rsa = m2.rsa_new()
     m2.rsa_set_e_bin(rsa, e)
     m2.rsa_set_n_bin(rsa, n)
