@@ -1,5 +1,7 @@
 0.20
 ----
+- Deprecated M2Crypto.PGP subpackage since nobody seems to be using it nor
+  is it being maintained
 - Added fedora_setup.sh to help work around differences on Fedora Core -based
   distributions (RedHat, CentOS, ...); thanks to Miloslav Trmac
 - Added X509.load_request_bio and load_request_string, by Hartmut Goebel and
